--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,23 +7,10 @@
   src: url("/fonts/venus-rising-rg.ttf");
 }
 
-.default-font {
+body {
   font-family: "venus-rising-rg";
 }
 
-/* html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+#__next {
+  min-height: 100vh;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-} */
